Changelog
=========

1.0b4 (UNRELEASED)
--------------------

- Fix user search
  [erral]

- Fix to add the plugin through the ZMI
  [erral]

- Use Twitter API directly to get user information
  [erral]

- Fix Access Token Request
  [erral]


1.0b3 (2012-10-18)
--------------------

- Implement IRolePlugin again to grant Member role
  [erral]


1.0b2 (2012/10/16)
-------------------

- Inherit from PloneUser instead of PropertiedUser
  [erral]

- Remove IRolesPlugin implementation
  [erral]

- Add missing oauth2 dependency
  [erral]

- Change user action name not to clash with Plone's
  [erral]

1.0b1 (2012/07/13)
-------------------

- Initial release
  [erral]