@@ -9,7 +9,6 @@ from Products.PluggableAuthService.interfaces.plugins import (
         IExtractionPlugin,
         IAuthenticationPlugin,
         ICredentialsResetPlugin,
-        IRolesPlugin,
         IPropertiesPlugin,
         IUserEnumerationPlugin,
         IUserFactoryPlugin
@@ -68,7 +67,6 @@ class CSTwitterUsers(BasePlugin):
             ICSTwitterPlugin,
             IExtractionPlugin,
             ICredentialsResetPlugin,
-            IRolesPlugin,
             IAuthenticationPlugin,
             IPropertiesPlugin,
             IUserEnumerationPlugin,
@@ -114,20 +112,6 @@ class CSTwitterUsers(BasePlugin):
                 }
 
         return None
-
-    #
-    # IRolesPlugin
-    #
-    def getRolesForPrincipal(selfm, principal, request=None):
-        """ Return a list of roles for the given principal (user or object)
-
-        We simply grant the Member role to every user authenticated
-        using this plugin
-        """
-        if ITwitterUser.providedBy(principal):
-            return ('Member', )
-
-        return ()
 
     #
     # IAuthenticationPlugin
